[package]
name = "tracing-collector-elastic"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
reqwest = { version = "*", features = ["blocking"] }


[dev-dependencies]
mockito = "0.29.0"
tracing = "*"
tracing-subscriber ={ version = "0.3.5", features = ["json","std","env-filter"]}
tracing-appender = "*"
